# testcontainers-example

./: Cargo.toml  README.md  docker-compose.yml
examples/: mssql_server.rs
src/: lib.rs
tests/: integration_test.rs
tests/common/: mod.rs  products.csv  schema.sql
