[package]
name = "testcontainers-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "testcontainers_example"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
rand = "0.8.5"
tiberius = { version = "0.12.2", default-features = false, features = ["tds73", "rustls", "rust_decimal"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
csv = "1.3.0"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.2.0", features = ["mssql_server"] }
